--- a/quarkus-2.3/pom.xml
+++ b/quarkus-2.3/pom.xml
@@ -7,7 +7,7 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
 
-    <artifactId>quarkus-1.10</artifactId>
+    <artifactId>quarkus-2.3</artifactId>
     <packaging>pom</packaging>
 
     <name>${project.groupId}.${project.artifactId}</name>
@@ -17,7 +17,10 @@
 
     <properties>
         <!-- latest Quarkus version -->
-        <quarkus.version>1.10.5.Final</quarkus.version>
+        <quarkus.version>2.3.1.Final</quarkus.version>
+
+        <!-- Quarkus 2 requires Java 11, also for its maven plugin -->
+        <java.release>11</java.release>
 
         <!-- Java EE modules that were removed from Java SE after Java 8 -->
         <!-- (see http://openjdk.java.net/jeps/320) -->
@@ -37,64 +40,79 @@
 
         <!-- MicroProfile Standard Versions, from the quarkus-bom-x.x.x.Final.pom -->
         <!-- or as transitive dependency from the smallrye artifacts -->
-        <mp.config.version>1.4</mp.config.version>
-        <mp.context-propagation.version>1.0.1</mp.context-propagation.version>
-        <mp.fault-tolerance.version>2.1</mp.fault-tolerance.version>
-        <mp.graphql.version>1.0.2</mp.graphql.version>
-        <mp.health.version>2.2</mp.health.version>
-        <mp.jwt.version>1.1.1</mp.jwt.version>
-        <mp.metrics.version>2.3</mp.metrics.version>
-        <mp.openapi.version>1.1.2</mp.openapi.version>
-        <mp.opentracing.version>1.3.3</mp.opentracing.version>
-        <mp.reactive-messaging.version>1.0</mp.reactive-messaging.version>
+        <mp.config.version>2.0</mp.config.version>
+        <mp.context-propagation.version>1.2</mp.context-propagation.version>
+        <mp.fault-tolerance.version>3.0</mp.fault-tolerance.version> <!-- transitive from smallrye.fault-tolerance.version -->
+        <mp.graphql.version>1.1.0</mp.graphql.version> <!-- transitive from smallrye.graphql.version -->
+        <mp.health.version>3.1</mp.health.version> <!-- transitive from smallrye.health.version -->
+        <mp.jwt.version>1.2</mp.jwt.version>
+        <mp.metrics.version>3.0</mp.metrics.version>
+        <mp.openapi.version>2.0.1-RC1</mp.openapi.version> <!-- transitive from smallrye.openapi.version -->
+        <mp.opentracing.version>2.0</mp.opentracing.version>
+        <!-- mp.reactive-messaging classes included in smallrye.reactive-messaging, no dependency on upstream API -->
         <mp.reactive-streams-operators.version>1.0.1</mp.reactive-streams-operators.version>
-        <mp.rest-client.version>1.4.1</mp.rest-client.version>
-        <smallrye.common.version>1.4.1</smallrye.common.version>
-        <smallrye.config.version>1.9.3</smallrye.config.version>
-        <smallrye.context-propagation.version>1.0.19</smallrye.context-propagation.version>
-        <smallrye.fault-tolerance.version>4.3.2</smallrye.fault-tolerance.version>
-        <smallrye.graphql.version>1.0.20</smallrye.graphql.version>
-        <smallrye.health.version>2.2.5</smallrye.health.version>
-        <smallrye.jwt.version>2.3.1</smallrye.jwt.version>
-        <smallrye.metrics.version>2.4.4</smallrye.metrics.version>
-        <smallrye.openapi.version>2.0.16</smallrye.openapi.version>
-        <smallrye.opentracing.version>1.3.4</smallrye.opentracing.version>
-        <smallrye.reactive-converter-api.version>1.2.2</smallrye.reactive-converter-api.version>
-        <smallrye.reactive-messaging.version>2.5.0</smallrye.reactive-messaging.version>
+        <mp.rest-client.version>2.0</mp.rest-client.version>
+        <smallrye.common.version>1.6.0</smallrye.common.version>
+        <smallrye.config.version>2.5.1</smallrye.config.version>
+        <smallrye.context-propagation.version>1.2.0</smallrye.context-propagation.version>
+        <smallrye.fault-tolerance.version>5.2.1</smallrye.fault-tolerance.version>
+        <smallrye.graphql.version>1.3.4</smallrye.graphql.version>
+        <smallrye.health.version>3.1.1</smallrye.health.version>
+        <smallrye.jwt.version>3.3.0</smallrye.jwt.version>
+        <smallrye.metrics.version>3.0.1</smallrye.metrics.version>
+        <smallrye.openapi.version>2.1.15</smallrye.openapi.version>
+        <smallrye.opentracing.version>2.0.1</smallrye.opentracing.version>
+        <smallrye.reactive-attribute-processor.version>3.9.1</smallrye.reactive-attribute-processor.version>
+        <smallrye.reactive-converter-api.version>2.6.0</smallrye.reactive-converter-api.version>
+        <smallrye.reactive-messaging.version>3.7.1</smallrye.reactive-messaging.version>
         <smallrye.reactive-streams-operators.version>1.0.13</smallrye.reactive-streams-operators.version>
+        <smallrye.mutiny.reactive-streams-operators.version>1.1.1</smallrye.mutiny.reactive-streams-operators.version>
+        <smallrye.mutiny.vertx.version>2.13.0</smallrye.mutiny.vertx.version>
         <!-- quarkus is using resteasy-client-microprofile instead of smallrye-rest-client -->
 
-        <!-- opentracing tracer implementation -->
-        <io.opentracing.version>0.31.0</io.opentracing.version>
-        <io.opentracing.contrib-jaxrs.version>0.4.1</io.opentracing.contrib-jaxrs.version>
-        <io.jaegertracing.version>0.34.3</io.jaegertracing.version>
+        <!-- tracer implementations -->
+        <io.opentelemetry.version>1.6.0</io.opentelemetry.version>
+        <io.opentracing.version>0.33.0</io.opentracing.version>
+        <io.opentracing.contrib-jaxrs.version>1.0.0</io.opentracing.contrib-jaxrs.version>
+        <io.jaegertracing.version>1.6.0</io.jaegertracing.version>
 
         <!-- Artifact versions provided by Quarkus x.y -->
-        <resteasy.version>4.5.8.Final</resteasy.version>
+        <resteasy.version>4.7.0.Final</resteasy.version>
         <apache.httpclient.version>4.5.13</apache.httpclient.version>
+        <!-- quarkus is excluding jakarta.json-api in favor of the transitive dependency of yasson (see maven3_repo\org\eclipse\yasson\x.x\*.pom) -->
         <jakarta.json.version>1.1.6</jakarta.json.version>
         <glassfish.jakarta.json.version>1.1.6</glassfish.jakarta.json.version>
         <jakarta.json.bind.version>1.0.2</jakarta.json.bind.version>
-        <yasson.version>1.0.8</yasson.version>
+        <yasson.version>1.0.9</yasson.version>
 
         <!-- note that for new projects you should consider using JSON-B (yasson) instead of Jackson -->
-        <jackson-2-version>2.11.3</jackson-2-version>
-        <jackson-bom.version>2.11.3</jackson-bom.version>
+        <jackson-2-version>2.12.4</jackson-2-version>
+        <jackson-bom.version>2.12.4</jackson-bom.version>
 
-        <infinispan.version>11.0.4.Final</infinispan.version>
-        <hibernate.version>5.4.26.Final</hibernate.version>
+        <infinispan.version>12.1.7.Final</infinispan.version>
+        <hibernate.version>5.6.0.Final</hibernate.version>
 
         <!-- Hibernate 6.0.1.Final is the reference implementation for Bean Validation 2.0 (EE8) -->
         <jakarta.validation.version>2.0.2</jakarta.validation.version>
-        <hibernate.validator.version>6.1.6.Final</hibernate.validator.version>
+        <hibernate.validator.version>6.2.0.Final</hibernate.validator.version>
+        <!-- ojdbc version in the quarkus-jdbc-oracle extension -->
+        <oracle.ojdbc.version>21.3.0.0</oracle.ojdbc.version>
 
         <!-- Quarkus x.y uses Quarkus ARC x.y (based on CDI 2.0) -->
         <jakarta.inject.version>1.0</jakarta.inject.version>
 
         <!-- we encountered IllegalArgumentException: Unsupported api in ASM code when -->
-        <!-- ASM/Byte-Buddy versions didn't match -->
-        <asm.version>9.0</asm.version>
-        <byte-buddy.version>1.10.19</byte-buddy.version>
+        <!-- the ASM version is too old for Byte-Buddy -->
+        <!-- Note: contrary to Wildfly with Quarkus ASM is managed, but not byte-buddy -->
+        <asm.version>9.1</asm.version>
+        <!-- I found the hibernate dependency using 1.10.19, but any newer version using ASM 9.1 should be fine too -->
+        <!-- (unfortunately I don't know if there is a way to express this with maven -->
+        <!-- so just using the same version as in com.six-group.ao.root:root) -->
+        <byte-buddy.version>1.10.22</byte-buddy.version>
+
+        <!-- it seems that the quarkus testing integration works best using the junit mentioned in the quarkus BOM -->
+        <junit.jupiter.version>5.8.0</junit.jupiter.version>
+        <junit.platform.version>1.8.0</junit.platform.version>
     </properties>
 
     <dependencyManagement>
@@ -180,6 +198,10 @@
                     <version>${mp.health.version}</version>
                     <exclusions>
                         <exclusion>
+                            <groupId>javax.enterprise</groupId>
+                            <artifactId>cdi-api</artifactId>
+                        </exclusion>
+                        <exclusion>
                             <groupId>org.osgi</groupId>
                             <artifactId>org.osgi.annotation.versioning</artifactId>
                         </exclusion>
@@ -230,11 +252,6 @@
                     </exclusions>
                 </dependency>
                 <dependency>
-                    <groupId>org.eclipse.microprofile.reactive.messaging</groupId>
-                    <artifactId>microprofile-reactive-messaging-api</artifactId>
-                    <version>${mp.reactive-messaging.version}</version>
-                </dependency>
-                <dependency>
                     <groupId>org.eclipse.microprofile.reactive-streams-operators</groupId>
                     <artifactId>microprofile-reactive-streams-operators-api</artifactId>
                     <version>${mp.reactive-streams-operators.version}</version>
@@ -243,6 +260,12 @@
                     <groupId>org.eclipse.microprofile.rest.client</groupId>
                     <artifactId>microprofile-rest-client-api</artifactId>
                     <version>${mp.rest-client.version}</version>
+                    <exclusions>
+                        <exclusion>
+                            <groupId>javax.inject</groupId>
+                            <artifactId>javax.inject</artifactId>
+                        </exclusion>
+                    </exclusions>
                 </dependency>
                 <dependency>
                     <groupId>io.smallrye.common</groupId>
@@ -292,8 +315,8 @@
                     <version>${smallrye.graphql.version}</version>
                     <exclusions>
                         <exclusion>
-                            <groupId>org.eclipse.microprofile.graphql</groupId>
-                            <artifactId>microprofile-graphql-api</artifactId>
+                            <groupId>org.slf4j</groupId>
+                            <artifactId>slf4j-api</artifactId>
                         </exclusion>
                     </exclusions>
                 </dependency>
@@ -314,12 +337,8 @@
                     <version>${smallrye.jwt.version}</version>
                     <exclusions>
                         <exclusion>
-                            <groupId>org.jboss.logging</groupId>
-                            <artifactId>jboss-logging</artifactId>
-                        </exclusion>
-                        <exclusion>
-                            <groupId>javax</groupId>
-                            <artifactId>javaee-api</artifactId>
+                            <groupId>org.slf4j</groupId>
+                            <artifactId>slf4j-api</artifactId>
                         </exclusion>
                     </exclusions>
                 </dependency>
@@ -329,16 +348,8 @@
                     <version>${smallrye.metrics.version}</version>
                     <exclusions>
                         <exclusion>
-                            <groupId>javax</groupId>
-                            <artifactId>javaee-api</artifactId>
-                        </exclusion>
-                        <exclusion>
                             <groupId>org.jboss.logging</groupId>
                             <artifactId>jboss-logging</artifactId>
-                        </exclusion>
-                        <exclusion>
-                            <groupId>org.osgi</groupId>
-                            <artifactId>org.osgi.annotation.versioning</artifactId>
                         </exclusion>
                     </exclusions>
                 </dependency>
@@ -359,10 +370,6 @@
                             <groupId>org.jboss.logging</groupId>
                             <artifactId>jboss-logging</artifactId>
                         </exclusion>
-                        <exclusion>
-                            <groupId>org.osgi</groupId>
-                            <artifactId>org.osgi.annotation.versioning</artifactId>
-                        </exclusion>
                     </exclusions>
                 </dependency>
                 <dependency>
@@ -371,20 +378,19 @@
                     <version>${smallrye.opentracing.version}</version>
                     <exclusions>
                         <exclusion>
-                            <groupId>org.eclipse.microprofile.config</groupId>
-                            <artifactId>microprofile-config-api</artifactId>
+                            <groupId>org.jboss.logging</groupId>
+                            <artifactId>jboss-logging</artifactId>
                         </exclusion>
+                    </exclusions>
+                </dependency>
+                <dependency>
+                    <groupId>io.smallrye.reactive</groupId>
+                    <artifactId>smallrye-connector-attribute-processor</artifactId>
+                    <version>${smallrye.reactive-attribute-processor.version}</version>
+                    <exclusions>
                         <exclusion>
-                            <groupId>io.smallrye</groupId>
-                            <artifactId>smallrye-config</artifactId>
-                        </exclusion>
-                        <exclusion>
-                            <groupId>javax</groupId>
-                            <artifactId>javaee-api</artifactId>
-                        </exclusion>
-                        <exclusion>
-                            <groupId>org.osgi</groupId>
-                            <artifactId>org.osgi.annotation.versioning</artifactId>
+                            <groupId>org.jboss.logging</groupId>
+                            <artifactId>jboss-logging</artifactId>
                         </exclusion>
                     </exclusions>
                 </dependency>
@@ -410,6 +416,21 @@
                     <version>${smallrye.reactive-streams-operators.version}</version>
                 </dependency>
                 <dependency>
+                    <groupId>io.smallrye.reactive</groupId>
+                    <artifactId>mutiny-reactive-streams-operators</artifactId>
+                    <version>${smallrye.mutiny.reactive-streams-operators.version}</version>
+                </dependency>
+                <dependency>
+                    <groupId>io.smallrye.reactive</groupId>
+                    <artifactId>smallrye-mutiny-vertx-core</artifactId>
+                    <version>${smallrye.mutiny.vertx.version}</version>
+                </dependency>
+                <dependency>
+                    <groupId>io.opentelemetry</groupId>
+                    <artifactId>opentelemetry-api</artifactId>
+                    <version>${io.opentelemetry.version}</version>
+                </dependency>
+                <dependency>
                     <groupId>io.opentracing</groupId>
                     <artifactId>opentracing-api</artifactId>
                     <version>${io.opentracing.version}</version>
@@ -423,6 +444,12 @@
                     <groupId>io.jaegertracing</groupId>
                     <artifactId>jaeger-core</artifactId>
                     <version>${io.jaegertracing.version}</version>
+                    <exclusions>
+                        <exclusion>
+                            <groupId>org.slf4j</groupId>
+                            <artifactId>slf4j-api</artifactId>
+                        </exclusion>
+                    </exclusions>
                 </dependency>
                 <dependency>
                     <groupId>org.jboss.resteasy</groupId>
@@ -432,6 +459,10 @@
                         <exclusion>
                             <groupId>commons-codec</groupId>
                             <artifactId>commons-codec</artifactId>
+                        </exclusion>
+                        <exclusion>
+                            <groupId>commons-io</groupId>
+                            <artifactId>commons-io</artifactId>
                         </exclusion>
                         <exclusion>
                             <groupId>org.jboss.logging</groupId>
@@ -474,6 +505,11 @@
                     <groupId>org.infinispan</groupId>
                     <artifactId>infinispan-jcache</artifactId>
                     <version>${infinispan.version}</version>
+                </dependency>
+                <dependency>
+                    <groupId>com.oracle.database.jdbc</groupId>
+                    <artifactId>ojdbc8</artifactId>
+                    <version>${oracle.ojdbc.version}</version>
                 </dependency>
                 <dependency>
                     <groupId>org.hibernate</groupId>
@@ -538,34 +574,6 @@
                     <groupId>javax.jws</groupId>
                     <artifactId>jsr181-api</artifactId>
                     <version>${javax.jws.version}</version>
-                </dependency>
-            </dependencies>
-        </profile>
-        <profile>
-            <id>quarkus-build-tree</id>
-            <!-- have a dependency entry for some quarkus extensions -->
-            <!-- to know see some dependency version not noted in the quarkus-bom -->
-            <!-- copy them in a quarkus project and use with quarkus-bootstrap:build-tree -->
-            <dependencies>
-                <dependency>
-                    <!-- to know jackson-version, apache.httpclient.version -->
-                    <groupId>io.quarkus</groupId>
-                    <artifactId>quarkus-rest-client-jackson</artifactId>
-                </dependency>
-                <dependency>
-                    <!-- to know infinispan-version, glassfish.jakarta.json.version -->
-                    <groupId>io.quarkus</groupId>
-                    <artifactId>quarkus-infinispan-client</artifactId>
-                </dependency>
-                <dependency>
-                    <!-- to know hibernate-version -->
-                    <groupId>io.quarkus</groupId>
-                    <artifactId>quarkus-hibernate-orm</artifactId>
-                </dependency>
-                <dependency>
-                    <!-- to know jakarta.validation.version and hibernate.validator.version -->
-                    <groupId>io.quarkus</groupId>
-                    <artifactId>quarkus-hibernate-validator</artifactId>
                 </dependency>
             </dependencies>
         </profile>
