--- a/update-checker/pom.xml
+++ b/update-checker/pom.xml
@@ -333,6 +333,11 @@
                 </dependency>
                 <dependency>
                     <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-rar-plugin</artifactId>
+                    <version>${maven.rar.plugin.version}</version>
+                </dependency>
+                <dependency>
+                    <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-release-plugin</artifactId>
                     <version>${maven.release.plugin.version}</version>
                 </dependency>
