--- a/wildfly-23/pom.xml
+++ b/wildfly-23/pom.xml
@@ -495,6 +495,14 @@
                     <groupId>${javax.xml.soap.groupId}</groupId>
                     <artifactId>${javax.xml.soap.artifactId}</artifactId>
                     <version>${javax.xml.soap.version}</version>
+                    <exclusions>
+                        <exclusion>
+                            <!-- Dependency convergence error -->
+                            <!-- (avoid dependency already excluded by Wildfly DepMgt) -->
+                            <groupId>jakarta.activation</groupId>
+                            <artifactId>jakarta.activation-api</artifactId>
+                        </exclusion>
+                    </exclusions>
                 </dependency>
                 <dependency>
                     <groupId>${javax.annotation.groupId}</groupId>
