--- a/quarkus-2.1/pom.xml
+++ b/quarkus-2.1/pom.xml
@@ -165,6 +165,11 @@
                     <version>${mp.config.version}</version>
                     <exclusions>
                         <exclusion>
+                            <!-- microprofile-health-api is using a newer version -->
+                            <groupId>biz.aQute.bnd</groupId>
+                            <artifactId>biz.aQute.bnd.annotation</artifactId>
+                        </exclusion>
+                        <exclusion>
                             <groupId>org.osgi</groupId>
                             <artifactId>org.osgi.annotation.versioning</artifactId>
                         </exclusion>
@@ -203,6 +208,10 @@
                         <exclusion>
                             <groupId>org.osgi</groupId>
                             <artifactId>org.osgi.annotation.versioning</artifactId>
+                        </exclusion>
+                        <exclusion>
+                            <groupId>org.osgi</groupId>
+                            <artifactId>osgi.annotation</artifactId>
                         </exclusion>
                     </exclusions>
                 </dependency>
@@ -245,6 +254,11 @@
                     <version>${mp.opentracing.version}</version>
                     <exclusions>
                         <exclusion>
+                            <!-- Quarkus is using jboss-jaxrs-api_2.1_spec -->
+                            <groupId>jakarta.ws.rs</groupId>
+                            <artifactId>jakarta.ws.rs-api</artifactId>
+                        </exclusion>
+                        <exclusion>
                             <groupId>org.osgi</groupId>
                             <artifactId>org.osgi.annotation.versioning</artifactId>
                         </exclusion>
@@ -260,6 +274,11 @@
                     <artifactId>microprofile-rest-client-api</artifactId>
                     <version>${mp.rest-client.version}</version>
                     <exclusions>
+                        <exclusion>
+                            <!-- Quarkus is using jboss-jaxrs-api_2.1_spec -->
+                            <groupId>jakarta.ws.rs</groupId>
+                            <artifactId>jakarta.ws.rs-api</artifactId>
+                        </exclusion>
                         <exclusion>
                             <groupId>javax.inject</groupId>
                             <artifactId>javax.inject</artifactId>
@@ -291,6 +310,11 @@
                             <groupId>org.jboss.logging</groupId>
                             <artifactId>jboss-logging</artifactId>
                         </exclusion>
+                        <exclusion>
+                            <!-- Quarkus is using jakarta.annotation-api -->
+                            <groupId>javax.annotation</groupId>
+                            <artifactId>javax.annotation-api</artifactId>
+                        </exclusion>
                     </exclusions>
                 </dependency>
                 <dependency>
@@ -321,6 +345,11 @@
                             <groupId>org.slf4j</groupId>
                             <artifactId>slf4j-api</artifactId>
                         </exclusion>
+                        <exclusion>
+                            <!-- Quarkus provides log4j-api already via jboss-logging -->
+                            <groupId>org.apache.logging.log4j</groupId>
+                            <artifactId>log4j-api</artifactId>
+                        </exclusion>
                     </exclusions>
                 </dependency>
                 <dependency>
@@ -350,6 +379,11 @@
                     <artifactId>smallrye-metrics</artifactId>
                     <version>${smallrye.metrics.version}</version>
                     <exclusions>
+                        <exclusion>
+                            <!-- Quarkus is using jboss-jaxrs-api_2.1_spec -->
+                            <groupId>jakarta.ws.rs</groupId>
+                            <artifactId>jakarta.ws.rs-api</artifactId>
+                        </exclusion>
                         <exclusion>
                             <groupId>org.jboss.logging</groupId>
                             <artifactId>jboss-logging</artifactId>
@@ -388,6 +422,16 @@
                             <groupId>org.jboss.logging</groupId>
                             <artifactId>jboss-logging</artifactId>
                         </exclusion>
+                        <exclusion>
+                            <!-- Quarkus is using jakarta.annotation-api -->
+                            <groupId>javax.annotation</groupId>
+                            <artifactId>javax.annotation-api</artifactId>
+                        </exclusion>
+                        <exclusion>
+                            <!-- Quarkus is using jboss-jaxrs-api_2.1_spec -->
+                            <groupId>jakarta.ws.rs</groupId>
+                            <artifactId>jakarta.ws.rs-api</artifactId>
+                        </exclusion>
                     </exclusions>
                 </dependency>
                 <dependency>
@@ -398,6 +442,10 @@
                         <exclusion>
                             <groupId>org.jboss.logging</groupId>
                             <artifactId>jboss-logging</artifactId>
+                        </exclusion>
+                        <exclusion>
+                            <groupId>org.osgi</groupId>
+                            <artifactId>org.osgi.annotation.versioning</artifactId>
                         </exclusion>
                     </exclusions>
                 </dependency>
@@ -431,6 +479,13 @@
                     <groupId>io.smallrye.reactive</groupId>
                     <artifactId>smallrye-mutiny-vertx-core</artifactId>
                     <version>${smallrye.mutiny.vertx.version}</version>
+                    <exclusions>
+                        <exclusion>
+                            <!-- Quarkus provides log4j-api already via jboss-logging -->
+                            <groupId>org.apache.logging.log4j</groupId>
+                            <artifactId>log4j-api</artifactId>
+                        </exclusion>
+                    </exclusions>
                 </dependency>
                 <dependency>
                     <groupId>io.opentracing</groupId>
@@ -470,6 +525,11 @@
                             <groupId>org.jboss.logging</groupId>
                             <artifactId>jboss-logging</artifactId>
                         </exclusion>
+                        <exclusion>
+                            <!-- Quarkus provides log4j-api already via jboss-logging -->
+                            <groupId>org.apache.logging.log4j</groupId>
+                            <artifactId>log4j-api</artifactId>
+                        </exclusion>
                     </exclusions>
                 </dependency>
                 <dependency>
@@ -501,12 +561,34 @@
                             <groupId>org.jboss.logging</groupId>
                             <artifactId>jboss-logging</artifactId>
                         </exclusion>
+                        <exclusion>
+                            <!-- Quarkus is using jakarta.annotation-api -->
+                            <groupId>javax.annotation</groupId>
+                            <artifactId>javax.annotation-api</artifactId>
+                        </exclusion>
+                        <exclusion>
+                            <!-- Quarkus is using jakarta.enterprise.cdi-api -->
+                            <groupId>javax.enterprise</groupId>
+                            <artifactId>cdi-api</artifactId>
+                        </exclusion>
                     </exclusions>
                 </dependency>
                 <dependency>
                     <groupId>org.infinispan</groupId>
                     <artifactId>infinispan-jcache</artifactId>
                     <version>${infinispan.version}</version>
+                    <exclusions>
+                        <exclusion>
+                            <!-- Quarkus is using jakarta.annotation-api -->
+                            <groupId>javax.annotation</groupId>
+                            <artifactId>javax.annotation-api</artifactId>
+                        </exclusion>
+                        <exclusion>
+                            <!-- Quarkus is using jakarta.enterprise.cdi-api -->
+                            <groupId>javax.enterprise</groupId>
+                            <artifactId>cdi-api</artifactId>
+                        </exclusion>
+                    </exclusions>
                 </dependency>
                 <dependency>
                     <groupId>com.oracle.database.jdbc</groupId>
